@@ -1,3 +1,8 @@
+2000-11-04 11:48:02  ShengHuo ZHU  <zsh@cs.rochester.edu>
+
+	* calendar/calendar.el (diary-face, holiday-face): Fix typo.
+	* info.el (info-menu-header): Fix typo.
+
 2000-11-04  Jason Rumney  <jasonr@gnu.org>
 
 	* language/european.el (decode-mac-roman): Test against r1 not r0.
